--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our awsome site!!!</a></div>
+				<div class="logo"><a href="#">Welcome to our awsome site of our company, hope you enjoy the time here.</a></div>
 			</header>
 
 		<!-- Main -->
